# flash-attn

./: .gitignore  LICENSE  README.md  flash_attn_v2_binding.cpp  flash_setup.py  flash_v2_setup.py  naive_setup.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
csrc/: flash_attn.cu  flash_attn_v2.cu  naive_attn.cu  naive_attn_binding.cpp
python/: benchmark.py  flash_attn_binding.cpp  naive_attn_binding.cpp
results/: result_128.json  result_64.json
tests/: test_correctness.py
