[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-attn"
version = "0.1.0"
description = "FlashAttention forward pass from scratch in CUDA C"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "matplotlib",
]

[tool.setuptools]
packages = []

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["naive_attn", "flash_attn", "flash_attn_v2"]